# tensorflow_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello_tf.cc  model.cc  model.h  scope_guard.h  scope_guard.hpp  tensor.cc  tensor.h  tf_utils.cc  tf_utils.cpp  tf_utils.h
examples/coco/: CMakeLists.txt  main.cpp
examples/large_model/: CMakeLists.txt  main.cpp
examples/load_model/: CMakeLists.txt  create_model.py  load_model.pb  main.cc
examples/mnist/: CMakeLists.txt  main.cpp  train_model.py
examples/save_and_restore/: CMakeLists.txt  main.cc
examples/train_linear_model/: CMakeLists.txt  create_model.py  example.c  graph.pb  main.cc
test/: CMakeLists.txt  allocate_tensor.cpp  batch_interface.cpp  create_tensor.cpp  graph.pb  graph_info.cpp  hello_tf.cpp  interface.cpp  load_graph.cpp  session_run.cpp  tensor_info.cpp
